# gitlab-issues-finder

./: .dockerignore  .editorconfig  .env.docker.example  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run.ps1
.github/workflows/: ci.yml
docs/: TECH_STACK.md
src/gitlab_issues_finder/: __init__.py  __main__.py  app.py  client.py  config.py  errors.py  logging_setup.py  metrics.py  middleware.py  models.py  project_resolver.py  queries.py  rate_limit.py  storage.py
src/gitlab_issues_finder/static/: loading.js  style.css
src/gitlab_issues_finder/templates/: _nav.html  board.html  error.html  index.html  result.html
tests/: conftest.py  test_app.py  test_client.py  test_config.py  test_logging.py  test_metrics.py  test_middleware.py  test_models.py  test_project_resolver.py  test_queries.py  test_rate_limit.py  test_storage.py
tests/fixtures/: issue_notes_mentioned.json  issue_notes_replied.json  issue_notes_self_mentioning.json  issues_assigned.json  issues_labeled.json  issues_opened.json  mr_labeled.json  mr_mentioned.json
