[project]
name = "gitlab-issues-finder"
version = "0.1.0"
description = "个人工具：在公司自托管 GitLab 上查询与某用户名相关的所有 opened issues"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "jinja2>=3.1.0",
    "python-gitlab>=4.0.0,<5.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-mock>=3.11.0",
    "responses>=0.24.0",
    "httpx>=0.26.0",
]

[project.scripts]
gif = "gitlab_issues_finder.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["data", ".venv", "build", "dist", "*.egg-info"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "SIM", "B", "UP"]
ignore = [
    "E501",
    "B008",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802", "N803"]
"src/gitlab_issues_finder/__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
ignore_missing_imports = true
disallow_untyped_defs = false
warn_unused_ignores = true
warn_return_any = false
# We're a small app; the goal is to catch real type errors, not
# force every function to be annotated. New public functions should
# still be annotated.
files = ["src/gitlab_issues_finder"]
